Bug 1211344 - Stop setting various window attributes when they are not in 'persist' attribute. r=enndeakin, a=lizzard